# polygrid

./: .gitignore  CMakeLists.txt  README.md  install_deps.sh
include/polygrid/: polybounds.hpp  polycell.hpp  polygrid  polygrid.hpp
include/polygrid/grid/: polycell.hpp  polygrid.hpp
include/polygrid/grid/impl/: polygrid.ipp
include/polygrid/impl/: polybounds.ipp  polycell.hpp  polygrid.ipp
include/polygrid/utils/: bresenham.hpp
include/polygrid/utils/impl/: bresenham.ipp
source/: main.cpp
tests/: CMakeLists.txt
